# newt

./: .cvsignore  .gitignore  AUTHORS  CHANGES  ChangeLog  Doxyfile  Makefile  Makefile.in  README  autogen.sh  button.c  buttonbar.c  checkbox.c  checkboxtree.c  config.h.in  configure.ac  configure.in  dialogboxes.c  dialogboxes.h  eawidth.c  eawidth.h  entry.c  form.c  grid.c  label.c  libnewt.pc.in  listbox.c  newt.0.52.ver  newt.c  newt.h  newt.spec  newt_pr.h  nls.h  peanuts.py  popcorn.py  scale.c  scrollbar.c  showchars.c  showkey.c  snack.c  (+14 more)
.tx/: config
po/: Makefile  ar.po  as.po  ast.po  bal.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  km.po  kn.po  ko.po  ku.po  lt.po  (+38 more)
tests/: window.c
