dnl Process this file with autoconf to produce a configure script.

AC_INIT(newt_pr.h)
AC_CONFIG_HEADER(config.h)

VERSION=$(awk '/^%define version/ {print $3}' newt.spec)

VERSION=0.50.27
SONAME=0.50
AC_SUBST(VERSION)
AC_SUBST(SONAME)
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

AC_ARG_WITH(gpm-support, [  --with-gpm-support         Compile with GPM support])

if test "x$with_gpm_support" = "xyes"; then
  AC_DEFINE(USE_GPM)
fi

AC_OUTPUT(Makefile)

